<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Buran</string>
    <string name="gemini_protocol">gemini://</string>
    <string name="main_input_hint">Enter gemini:// address</string>
    <string name="main_input_search_hint">Enter search term</string>
    <string name="copy_address">Share address</string>
    <string name="load_image">Display inline</string>
    <string name="about">About</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard</string>
    <string name="gemini_address">Gemini address</string>
    <string name="share">Share</string>
    <string name="set_home">Set Home</string>
    <string name="settings">Settings</string>
    <string name="about_body">A simple Gemini protocol browser from Corewala</string>
    <string name="copyright">Copyright © 2022 Corewala</string>
    <string name="about_ariane_source">Buran is based on the Ariane browser by ÖLAB under the European Union Public Licence</string>
    <string name="about_font">Code blocks are rendered using JetBrains Mono by JetBrains</string>
    <string name="about_glyphs">Glyphs used are from Material Icons by Google</string>
    <string name="source">Source</string>
    <string name="clear_cache">Clear runtime cache</string>
    <string name="history">History</string>
    <string name="clear_history">Clear history</string>
    <string name="reload">Refresh</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="save_image">Save Image</string>
    <string name="save_track">Save track</string>
    <string name="dismiss_player">Dismiss player</string>
    <string name="page_backlinks">Backlinks</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="name">Name</string>
    <string name="gemini_uri">Gemini URL</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="move_down">Move down</string>
    <string name="move_up">Move up</string>
    <string name="unknown_mime_dialog_title">Unknown Mime Type</string>
    <string name="unknown_host">Unknown Host</string>
    <string name="search_instead">Search instead?</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="confirm">Ok</string>
    <string name="error">Error</string>
    <string name="no_app_installed_that_can_open">No app installed that can open %s</string>
    <string name="no_state_object_exists">File download error - no state object exists</string>
    <string name="file_saved_to_device">File saved to device</string>
    <string name="configure_buran">Configure Buran</string>
    <string name="home_capsule">Home Capsule</string>
    <string name="not_valid_search_string">This is not a valid search base</string>
    <string name="not_valid_address">This is not a valid address</string>
    <string name="no_home_capsule_set">No home capsule set</string>
    <string name="search_engine">Search Engine</string>
    <string name="search_base">Search Base</string>
    <string name="update">Update</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="prefs_override_theme">Select a theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="tls_config">TLS Config</string>
    <string name="web_content">Web Content</string>
    <string name="web_content_label">Open websites internally using \'Custom Tabs\', instead of using the default browser. This might help you stay in Geminispace instead of being distracted by the wider web. Requires compatible default browser.</string>
    <string name="web_content_switch_label">Open internally</string>
    <string name="http_proxy">HTTP proxy</string>
    <string name="no_http_proxy_set">No HTTP proxy set</string>
    <string name="proxied_content">This content is rendered through a proxy</string>
    <string name="open_original">Open original</string>
    <string name="show_inline_images">Inline local images</string>
    <string name="pkcs_notice">Only PKCS12 client keystores are currently supported.</string>
    <string name="client_certificate">Client Certificate</string>
    <string name="tap_to_select_client_certificate">Tap to select client certificate</string>
    <string name="client_certificate_password">Client Certificate Password</string>
    <string name="no_password">No Password</string>
    <string name="use_client_certificate">Use Client Certificate</string>
    <string name="client_certificate_required">Client Certificate Required</string>
    <string name="confirm_your_identity">Confirm your identity</string>
    <string name="use_biometric_unlock">Verify your biometric credentials to continue</string>
    <string name="biometric_cert_verification">Client Certificate biometrics</string>
    <string name="load_cert">Load Certificate</string>
    <string name="unload_cert">Unload Certificate</string>
    <string name="cert_loaded">Certificate loaded</string>
    <string name="cert_unloaded">Certificate unloaded</string>
    <string name="set_home_capsule">Set home capsule</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="new_version_available">New version available</string>
    <string name="no_internet">No internet access</string>
    <string name="retry">Refresh this page to try again</string>
    <string name="history_cleared">History cleared</string>
    <string name="runtime_cache_cleared">Runtime cache cleared</string>
    <string name="show_inline_icons">Inline link icons</string>
    <string name="show_link_buttons">Show link buttons</string>
    <string name="use_attention_guides">Use attention guides</string>
    <string name="bookmarks_empty">You don\'t have any bookmarks yet</string>
    <string name="import_bookmarks">Import bookmarks</string>
    <string name="export_bookmarks">Export bookmarks</string>
    <string name="accessibility">Accessibility</string>
    <string name="prefs_override_page_background">Use custom page background colour</string>
    <string name="prefs_override_page_background_dialog_title">Page Background Colour</string>
    <string name="prefs_override_page_background_title">Page Background Colour</string>
</resources>