<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/app" >
        <item
            android:id="@+id/overflow_menu_search"
            android:title="@string/search"/>
        <item
            android:id="@+id/overflow_menu_bookmark"
            android:title="@string/add_bookmark"/>
        <item
            android:id="@+id/overflow_menu_bookmarks"
            android:title="@string/bookmarks"/>
        <item
            android:id="@+id/overflow_menu_history"
            android:title="@string/history"/>
        <item
            android:id="@+id/overflow_menu_share"
            android:title="@string/share"/>
    </group>

    <group android:id="@+id/other" >
        <item
            android:id="@+id/overflow_menu_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/overflow_menu_about"
            android:title="@string/about"/>
    </group>
</menu>