<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bookmark_toolbar"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_height="@dimen/bar_height"
        app:title="@string/add_bookmark"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookmark_toolbar"
        android:padding="@dimen/default_margin_big"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/bookmark_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gemini_uri" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/bookmark_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:lines="1"
            android:maxLines="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>