<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_margin">

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/close_tab_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/vector_close" android:layout_marginTop="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin" android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"/>

        <android.widget.TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/close_tab_dialog"
                android:layout_marginLeft="@dimen/screen_margin"
                android:textSize="@dimen/h3_text_size"
                android:text="@string/about"/>

    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_margin_big"
            android:paddingRight="@dimen/default_margin_big"
            android:paddingBottom="@dimen/default_margin_big"
            android:orientation="vertical">

            <!-- Description -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_margin_big"
                android:textColor="@color/stroke"
                android:text="@string/about_body"/>

            <!-- Version -->
            <TextView
                android:id="@+id/version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/stroke"
                tools:text="1.0.0 alpha delta"/>

            <!-- Copyright -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_margin"
                android:textColor="@color/stroke"
                android:text="@string/copyright"/>

            <!-- Source button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/source_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Source"/>

            <!-- DIV -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:alpha="0.5"
                android:background="?attr/colorOnSurface" />

            <!-- Ariane source attribution-->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/default_margin"
                    android:textColor="@color/stroke"
                    android:text="@string/about_ariane_source"/>

            <!-- Font Attribution -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_margin"
                android:textColor="@color/stroke"
                android:text="@string/about_font"/>

            <!-- Glyph Attribution -->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/default_margin"
                    android:textColor="@color/stroke"
                    android:text="@string/about_glyphs"/>

            <!-- DIV -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:alpha="0.5"
                android:background="?attr/colorOnSurface" />



    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</RelativeLayout>